# stmf1_template_project

./: .gitmodules  CMakeLists.txt  README.md  st_nucleo_f103rb.cfg
applications/: CMakeLists.txt
applications/app1/: app.c  app.h
base/: CMakeLists.txt
base/board/: board.c
base/stcubx/: .cproject  .mxproject  .project  CMakeLists.txt  stcubx.ioc
base/stcubx/Core/Inc/: stm32f1xx_it.h
base/stcubx/Core/Src/: gpio.c  main.c  stm32f1xx_it.c
cmake/: compilationLevelSelection.cmake  tool.cmake
docs/: buildMode.md
drivers/: CMakeLists.txt
drivers/LedSmg/: README.md  led_smg.c  led_smg_test.c
drivers/LedSmg/Inc/: led_smg.h
kernel/: CMakeLists.txt
